# openfx-misc

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis-coverity-scan-build.sh  .travis.yml  CMakeLists.txt  ClipTest.ofx copy-Info.plist  ColorLookup.ofx copy-Info.plist  LICENSE  Makefile  Makefile.master  Misc.files  README-hosts.txt  README.md  README.txt  Ramp.ofx copy-Info.plist  ReConverge.ofx copy-Info.plist  TODO.md  gpl-header-c.txt
Add/: Add.cpp  Add.h  Info.plist  Makefile  PluginRegistration.cpp
AdjustRoD/: AdjustRoD.cpp  AdjustRoD.h  Makefile  PluginRegistration.cpp
AdjustRoDOFX/: AdjustRoDOFX.h  Makefile
AdjustRod/: AdjustRod.cpp  AdjustRod.h  Info.plist  PluginRegistration.cpp
Anaglyph/: Anaglyph.cpp  Anaglyph.h  Info.plist  Makefile  PluginRegistration.cpp
AppendClip/: AppendClip.cpp  AppendClip.h  Info.plist  Makefile  PluginRegistration.cpp
Bl_Defocus/: BLI_rand.cpp  BLI_rand.h  CMP_defocus.cpp  CMP_defocus.h  ImathInt64.h  ImathLimits.h  ImathRandom.h  Info.plist  Makefile  README_FIRST.txt  bl_defocus_plugin.cpp  bl_defocus_plugin.hpp  bl_defocus_processor.cpp  bl_defocus_processor.hpp  bl_zdefocus_plugin.cpp  bl_zdefocus_plugin.hpp  register_plugins.cpp
CImg/: CImg-1.7.1-omp.patch  CImg-2.0.0-anisotropic.patch  CImgBilateral.cpp  CImgBilateral.h  CImgBlur.cpp  CImgBlur.h  CImgDenoise.cpp  CImgDenoise.h  CImgDilate.cpp  CImgDilate.h  CImgEqualize.cpp  CImgEqualize.h  CImgErode.cpp  CImgErode.h  CImgErodeSmooth.cpp  CImgErodeSmooth.h  CImgExpression.cpp  CImgExpression.h  CImgFilter.cpp  CImgFilter.h  CImgGuided.cpp  CImgGuided.h  CImgHistEQ.cpp  CImgHistEQ.h  CImgMedian.cpp  CImgMedian.h  CImgNoise.cpp  CImgNoise.h  CImgOperator.cpp  CImgOperator.h  CImgPlasma.cpp  CImgPlasma.h  CImgRollingGuidance.cpp  CImgRollingGuidance.h  CImgSharpenInvDiff.cpp  CImgSharpenInvDiff.h  CImgSharpenShock.cpp  CImgSharpenShock.h  CImgSmooth.cpp  CImgSmooth.h  (+9 more)
Card3D/: Card3D.cpp  Info.plist  Makefile
ChannelMath/: ChannelMath.cpp  ChannelMath.h  Info.plist  Makefile  PluginRegistration.cpp  README.org  README.txt  exprtk.hpp
CheckerBoard/: CheckerBoard.cpp  CheckerBoard.h  Info.plist  Makefile  PluginRegistration.cpp
ChromaKeyer/: ChromaKeyer.cpp  ChromaKeyer.h  Info.plist  Makefile  PluginRegistration.cpp
Clamp/: Clamp.cpp  Clamp.h  Info.plist  Makefile  PluginRegistration.cpp
ClipTest/: ClipTest.cpp  ClipTest.h  Info.plist  Makefile  PluginRegistration.cpp
ColorBars/: ColorBars.cpp  Info.plist  Makefile
ColorCorrect/: ColorCorrect.cpp  ColorCorrect.h  Info.plist  Makefile  PluginRegistration.cpp
ColorLookup/: ColorLookup.cpp  ColorLookup.h  Makefile  PluginRegistration.cpp
ColorMatrix/: ColorMatrix.cpp  ColorMatrix.h  Makefile  PluginRegistration.cpp
ColorSuppress/: ColorSuppress.cpp  Info.plist  Makefile
ColorTransform/: ColorTransform.cpp  ColorTransform.h  Info.plist  Makefile  PluginRegistration.cpp
ColorWheel/: ColorWheel.cpp  Info.plist  Makefile
Constant/: Constant.cpp  Constant.h  Info.plist  Makefile  PluginRegistration.cpp  ofxTestLog.txt
ContactSheet/: ContactSheet.cpp  Info.plist  Makefile
CopyRectangle/: CopyRectangle.cpp  CopyRectangle.h  Info.plist  Makefile  PluginRegistration.cpp
CornerPin/: CornerPin.cpp  CornerPin.h  Info.plist  Makefile  PluginRegistration.cpp
Crop/: Crop.cpp  Crop.h  Info.plist  Makefile  PluginRegistration.cpp
DebugProxy/: DebugProxy.cpp  Info.plist  Makefile
Deinterlace/: Deinterlace.cpp  Deinterlace.h  Info.plist  Makefile  PluginRegistration.cpp
DenoiseSharpen/: DenoiseSharpen.cpp  DenoiseWavelet.cpp  Info.plist  Makefile
Despill/: Despill.cpp  Info.plist  Makefile
Difference/: Difference.cpp  Difference.h  Info.plist  Makefile  PluginRegistration.cpp
Dissolve/: Dissolve.cpp  Dissolve.h  Info.plist  Makefile  PluginRegistration.cpp
Distortion/: Distortion.cpp  Distortion.h  DistortionModel.cpp  DistortionModel.h  Info.plist  Makefile  PluginRegistration.cpp
ESATracker/: ESATracker.cpp  ESATracker.h  Info.plist  Makefile  PluginRegistration.cpp
FrameBlend/: FrameBlend.cpp  FrameBlend.h  Info.plist  Makefile  PluginRegistration.cpp
FrameHold/: FrameHold.cpp  FrameHold.h  Info.plist  Makefile  PluginRegistration.cpp
FrameRange/: FrameRange.cpp  FrameRange.h  Info.plist  Makefile  PluginRegistration.cpp
GREYCstoration/: Info.plist  Makefile  README.txt  greycstoration_plugin.cpp  greycstoration_plugin.hpp  register_plugins.cpp
Gamma/: Gamma.cpp  Gamma.h  Info.plist  Makefile  PluginRegistration.cpp
GodRays/: GodRays.cpp  GodRays.h  Info.plist  Makefile  PluginRegistration.cpp
Grade/: Grade.cpp  Grade.h  Info.plist  Makefile  PluginRegistration.cpp
HSV/: HSV.cpp  HSV.h  Info.plist  Makefile  PluginRegistration.cpp
HSVTool/: HSVTool.cpp  HSVTool.h  Info.plist  Makefile  PluginRegistration.cpp
HueCorrect/: HueCorrect.cpp  HueCorrect1.cpp  Info.plist  Makefile
IDistort/: IDistort.cpp  IDistort.h  Info.plist  Makefile  PluginRegistration.cpp
INK/: .#INK.cpp  CImg.h  INK-user-guide.org  INK.cpp  INK.h  Info.plist  Makefile  PluginRegistration.cpp  README.org  README.txt
ImageStatistics/: ImageStatistics.cpp  ImageStatistics.h  Info.plist  Makefile  PluginRegistration.cpp
Invert/: Info.plist  Invert.cpp  Invert.h  Makefile  PluginRegistration.cpp
JoinViews/: Info.plist  JoinViews.cpp  JoinViews.h  Makefile  PluginRegistration.cpp
KeyMix/: Info.plist  KeyMix.cpp  Makefile
Keyer/: Info.plist  Keyer.cpp  Keyer.h  Makefile  PluginRegistration.cpp
LayerContactSheet/: Info.plist  LayerContactSheet.cpp  Makefile
Log2Lin/: Info.plist  Log2Lin.cpp  Makefile
MatteMonitor/: Info.plist  Makefile  MatteMonitor.cpp  MatteMonitor.h  PluginRegistration.cpp
Merge/: Info.plist  Makefile  Merge.cpp  Merge.h  PluginRegistration.cpp
Mirror/: Info.plist  Makefile  Mirror.cpp  Mirror.h  PluginRegistration.cpp
Misc/: CImg.vcxproj  Info.plist  Makefile  Misc.sln  Misc.vcxproj  PluginRegistrationCombined.cpp  Support.vcxproj  freeglut_font_data.cpp  ofxsFilter.h  ofxsMaskMix.h  ofxsMatrix2D.h  ofxsMerging.h  (+13 more)
Misc.xcodeproj/: project.pbxproj
(+464 files in other folders)
